# vars-ng

./: .gitignore  README.md  config.nix  flake.nix  main.py  pyproject.toml  test.nix  tests.nix
.github/workflows/: check.yml
tests/: conftest.py  integration_test_wrapper.py  test_cli.py  test_execution.py  test_models.py  test_utils.py
vars_ng/: backend-age.nix  backend-local.nix  backend-sqlite.nix  cli.py  evaluator.py  execution.py  models.py  options.nix  utils.py
