[project]
name = "vars-ng"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
vars-ng = "vars_ng.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["vars_ng"]

[tool.hatch.build.targets.wheel.force-include]
"vars_ng/options.nix" = "vars_ng/options.nix"
"vars_ng/backend-local.nix" = "vars_ng/backend-local.nix"

